fix(logic): check write permission & logic
