# openapi/swagger.yaml
@@ -208,28 +208,67 @@ paths:
           description: successful operation
           schema:
             "$ref": '#/definitions/UserInfo'
-  '/data/{uuid}':
+  '/data/download/{file_id}':
     get:
       tags:
         - data
-      summary: Create a presigned URL for data
+      summary: Create a presigned URL for data specified by file_id
       description: >-
-        Allow users to get a pre-signed URL given the location of preference.
+        Allow users to get a pre-signed URL to download data given the location of preference.
       security:
         - OAuth2: [user]
       operationId: getPresignedURL
       parameters:
-        - name: uuid
+        - name: file_id
           required: true
           type: string
           in: path
           description: data UUID
-        - name: location
-          required: true
+        - name: protocol
+          required: false
           type: string
           in: query
-          description: location (as in cloud provider) to use
-          enum: [aws, google]
+          description: a protocol provided by storage provider
+          enum: [http, s3, gs]
+        - name: expired_in_mins
+          required: false
+          type: int
+          in: query
+          description: default 30, maximum is 1440
+      responses:
+        '200':
+          description: successful operation
+          schema:
+            "$ref": '#/definitions/PresignedURL'
+        '400':
+          description: 'Invalid input: UUID not found or invalid location'
+  '/data/upload/{file_id}':
+    get:
+      tags:
+        - data
+      summary: Create a presigned URL for data specified by file_id
+      description: >-
+        Allow users to get a pre-signed URL to upload data given the location of preference.
+      security:
+        - OAuth2: [user]
+      operationId: getPresignedURL
+      parameters:
+        - name: file_id
+          required: true
+          type: string
+          in: path
+          description: data UUID
+        - name: protocol
+          required: false
+          type: string
+          in: query
+          description: a protocol provided by storage provider
+          enum: [http, s3, gs]
+        - name: expired_in_mins
+          required: false
+          type: string
+          in: query
+          description: default 30, maximum is 1440
       responses:
         '200':
           description: successful operation
